# folderer

./: Cargo.toml  README.md
src/: accumulator.rs  adder.rs  dynfolder.rs  lib.rs
tests/: accumulator_tests.rs  adder_tests.rs  dynfolter_tests.rs
